[gd_scene load_steps=7 format=3 uid="uid://ycbyy6kn1yln"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_blk7w"]
[ext_resource type="Theme" uid="uid://bghathf6glpnu" path="res://misc/ui_theme.tres" id="2_nw3mq"]
[ext_resource type="FontFile" uid="uid://v51lfg2pxryq" path="res://dialouge/styles/Vaticanus-G3yVG.ttf" id="3_j3kob"]

[sub_resource type="LabelSettings" id="LabelSettings_fekwl"]
font = ExtResource("3_j3kob")
font_size = 8
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_0aw1q"]
font = ExtResource("3_j3kob")
font_size = 64
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g01cj"]
font = ExtResource("3_j3kob")
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_blk7w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 440.0
offset_top = 11.0
offset_right = 609.0
offset_bottom = 51.0

[node name="MoraleBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_nw3mq")
value = 10.0
show_percentage = false

[node name="ProfitsBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_nw3mq")
value = 10.0
show_percentage = false

[node name="ReputationBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_nw3mq")
value = 10.0
show_percentage = false

[node name="AuthorithyBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_nw3mq")
value = 10.0
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 8.0
offset_right = 440.0
offset_bottom = 52.0

[node name="Morale" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Morale"
label_settings = SubResource("LabelSettings_fekwl")

[node name="Profit" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Profit"
label_settings = SubResource("LabelSettings_fekwl")

[node name="Reputation" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Reputation"
label_settings = SubResource("LabelSettings_fekwl")

[node name="Authority" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Authority
"
label_settings = SubResource("LabelSettings_fekwl")

[node name="GameOver" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 176.0
offset_top = 96.0
offset_right = 216.0
offset_bottom = 136.0

[node name="gameover_label" type="Label" parent="GameOver"]
visible = false
layout_mode = 0
offset_left = 14.0
offset_top = 29.0
offset_right = 326.0
offset_bottom = 93.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_0aw1q")

[node name="reason_label" type="Label" parent="GameOver"]
visible = false
layout_mode = 0
offset_left = 25.0
offset_top = 83.0
offset_right = 317.0
offset_bottom = 106.0
text = "you failed."
label_settings = SubResource("LabelSettings_g01cj")
horizontal_alignment = 1
